HNC-452 Gave product title a fixed height so that content below aligns correctly

--- a/src/main/webapp/bundles/home/less/results.less
+++ b/src/main/webapp/bundles/home/less/results.less
@@ -402,7 +402,9 @@
 				}
 			}
 
-
+			.productTitle {
+				height: 38px;
+			}
 		}
 
 		@media (@lg) {
